# cli-based-task-manager

./: Cargo.toml  README.md  install.sh  tasks.json
docs/: CLAUDE.md  CODEBASE_MAP.md
src/: cli.rs  error.rs  main.rs  manager.rs  task.rs
