[package]
name = "task-manager"
version = "1.0.0"
edition = "2021"
description = "Enterprise-grade task management CLI tool"
authors = ["Task Manager Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mwijanarko1/cli-based-task-manager"
keywords = ["cli", "task", "management", "productivity"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# File operations
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
# Colors for output
colored = "2.0"
# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
# Input validation
validator = { version = "0.20", features = ["derive"] }
# Error handling
thiserror = "2.0"

[dev-dependencies]
# Testing
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"